Página CONTATOS pronta

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@ Version: 1.0
                         <a class="nav-link" href="#idblog">BLOG</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contato.html">CONTATO</a>
+                        <a class="nav-link" href="#idcontato">CONTATO</a>
                     </li>    
                 </ul>
             </div>
@@ -131,7 +131,7 @@ Version: 1.0
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
 
-            <button type="button" class="btn btn-danger" href="contato.html">MAIS CONTATOS</button>
+            <button type="button" class="btn btn-danger">MAIS CONTATOS</button>
 
         </div>
 
@@ -140,7 +140,7 @@ Version: 1.0
 
     <footer class="container-fluid text-center bg_footer">
         <p>Desenvolido por HAM BUG - WEB DESIGN</p>
-        <p>www.hambug.com.br</p>
+        <p>www.hambug-webdesign.com.br</p>
 
 
     </footer>
