Página Quem Somos Pronta

--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@ Version: 1.0
     <link rel="shortcut icon" href="img/Proposta04_logo01.png" type="image/x-icon">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     
     <title>HAM BUG - CONTATO</title>
 </head>
@@ -38,10 +38,10 @@ Version: 1.0
                         <a class="nav-link" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#idquemsomos">QUEM SOMOS</a>
+                        <a class="nav-link" href="quemsomos.html">QUEM SOMOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#idblog">BLOG</a>
+                        <a class="nav-link" href="blog.html">BLOG</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#idcontato">CONTATO</a>
