--- a/blog.html
+++ b/blog.html
@@ -20,9 +20,9 @@ Version: 1.0
     <link rel="shortcut icon" href="img/Proposta04_logo01.png" type="image/x-icon">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     
-    <title>HAM BUG - WEB DESIGN</title>
+    <title>HAM BUG - BLOG</title>
 </head>
 
 
@@ -35,16 +35,16 @@ Version: 1.0
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#idquemsomos">QUEM SOMOS</a>
+                        <a class="nav-link" href="quemsomos.html">QUEM SOMOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#idblog">BLOG</a>
+                        <a class="nav-link active" href="#idblog">BLOG</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#idcontato">CONTATO</a>
+                        <a class="nav-link" href="contato.html">CONTATO</a>
                     </li>    
                 </ul>
             </div>
