--- a/quemsomos.html
+++ b/quemsomos.html
@@ -145,7 +145,7 @@ Version: 1.0
 
     <footer class="container-fluid text-center bg_footer">
         <p>Desenvolido por HAM BUG - WEB DESIGN</p>
-        <p>www.hambug-webdesign.com.br</p>
+        <p>www.hambug.com.br</p>
 
 
     </footer>
