--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Version: 1.0
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
 
-            <button type="button" class="btn btn-danger" href="contato.html">MAIS CONTATOS</button>
+            <button href="contato.html" type="button" class="btn btn-danger">MAIS CONTATOS</button>
 
         </div>
 
