--- a/quemsomos.html
+++ b/quemsomos.html
@@ -65,24 +65,24 @@ Version: 1.0
                         <div class="col-lg-4 rotacionar">
                             <img src="img/quemsomos_Hilberto.png" width="300px" alt="Hilberto Carlos Schaurich">
                             <p class="blog_resumo">
-                                Hilberto Carlos Schaurich <br>
-                                Comercial Administrativo
+                                HILBERTO CARLOS SCHAURICH <br>
+                                Diretor Administrativo-Financeiro
 
                             </p>
                         </div>
                         <div class="col-lg-4 rotacionar text">
                             <img src="img/quemsomos_andiara.png" width="300px" alt="Andiara Cossetin">
                             <p class="blog_resumo">
-                                Andiara Cossetin <br>
-                                Editora Chefe
+                                ANDIARA COSSETIN <br>
+                                Estrategista de Conexões Virtuais
 
                             </p>    
                         </div>  
                         <div class="col-lg-4 rotacionar">
                             <img src="img/quemsomos_Marcel.png" width="300px" alt="Marcel Donin">
                             <p class="blog_resumo">
-                                Marcel Donin <br>
-                                Desenvolvedor Web
+                                MARCEL DONIN <br>
+                                Programador Front-End Senior
 
                             </p>    
                         </div>   
